--- a/.env-example
+++ b/.env-example
@@ -2,10 +2,10 @@ API_ID=
 API_HASH=
 
 # True / False (bot/config/proxies.txt)
-USE_PROXY_FROM_FILE=
+USE_PROXY_FROM_FILE=False
 
 #True / False
-WATCH_VIDEO=
+WATCH_VIDEO=True
 
 # default 300
 MIN_AVAILABLE_ENERGY=
@@ -18,7 +18,7 @@ ADD_TAPS_ON_TURBO=
 AUTO_BUY_TAPBOT=
 
 # True / False
-AUTO_UPGRADE_TAP=
+AUTO_UPGRADE_TAP=False
 # default 5
 MAX_TAP_LEVEL=
 # True / False
@@ -30,7 +30,7 @@ AUTO_UPGRADE_CHARGE=
 # default 3
 MAX_CHARGE_LEVEL=
 # True / False
-APPLY_DAILY_ENERGY=
+APPLY_DAILY_ENERGY=False
 APPLY_DAILY_TURBO=
 
 # default [7, 31]
@@ -58,6 +58,6 @@ USE_RANDOM_DELAY_IN_RUN=
 RANDOM_DELAY_IN_RUN=
 
 # True / False
-REF=
+REF=False
 # ex. r_bc7a351b1a
 REF_ID=
